more natural behaviour of swipe

--- a/index.html
+++ b/index.html
@@ -15,21 +15,31 @@
 
 		<div class="slidedown"></div>
 
-		<!-- Slider main container -->
-		<div class="swiper-container">
-		    <!-- Additional required wrapper -->
-		    <div class="swiper-wrapper">
-		        <!-- Slides -->
-		        <div class="swiper-slide">
-		        	<div><img src="images/left_page/controlcenter_search_keyboard_noresult.png"></div>
-		        </div>
-		        <div class="swiper-slide">
-		        	<div><img src="images/control_center/control-center-second-normal.png"></div>
-		        </div>
-		        <div class="swiper-slide">
-		        	<div><img src="images/recent_apps/med clear all/mostrecent1.png"></div>
-		        </div>
-		    </div>
+		<div class="swiper-container vertic">
+
+			<div class="swiper-wrapper">
+				<div class="swiper-slide">
+					<img class="hide" src="images/homescreen.png" />
+				</div>
+				<div class="swiper-slide">
+					<!-- Slider main container -->
+					<div class="swiper-container horizon">
+					    <!-- Additional required wrapper -->
+					    <div class="swiper-wrapper">
+					        <!-- Slides -->
+					        <div class="swiper-slide">
+					        	<div class="img-wrap"><img src="images/left_page/controlcenter_search_keyboard_noresult.png"></div>
+					        </div>
+					        <div class="swiper-slide">
+					        	<div class="img-wrap"><img src="images/control_center/control-center-second-normal.png"></div>
+					        </div>
+					        <div class="swiper-slide">
+					        	<div class="img-wrap"><img src="images/recent_apps/med clear all/mostrecent1.png"></div>
+					        </div>
+					    </div>
+					</div>
+				</div>
+			</div>
 		</div>
 		
 
@@ -39,7 +49,13 @@
 		<script type="text/javascript">
 			$(document).ready(function () {
 			    //initialize swiper when document ready  
-			    var mySwiper = new Swiper ('.swiper-container', {
+			    var swiperv = new Swiper ('.vertic', {
+			      // Optional parameters
+			      direction: 'vertical',
+			      loop: false,
+			    });
+
+			    var swiperh = new Swiper ('.horizon', {
 			      // Optional parameters
 			      direction: 'horizontal',
 			      loop: false,
@@ -57,15 +73,16 @@
 			    $('.area').click(function(){
 
 
-			    	mySwiper.slideTo($(this).index(),0);
-			    	slideup();  
+			    	swiperh.slideTo($(this).index(),0);
+			    	swiperv.slideTo(1);
+			    	//slideup();  
 
 			    });  
 
 			    	 
 
 			    $('.slidedown').click(function(){
-			    	slidedown();
+			    	swiperv.slideTo(0);
 			    });       
 		  	});
 		</script>
