New search page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="bower_components/Swiper/dist/css/swiper.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>Control Center</title>
 	</head>
 	<body>
 		<div class="active_area">
@@ -29,7 +30,7 @@
 					        <div class="swiper-slide">
 					        	<div class="img-wrap">
 					        		<div class="blink">|</div>
-					        		<img src="images/v3/controlcenter-search3.png">
+					        		<img src="images/v3/controlcenter-search3_withsearch.png">
 					        	</div>
 					        </div>
 					        <div class="swiper-slide">
