--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="bower_components/Swiper/dist/css/swiper.min.css">
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style.css?1">
 		<title>Control Center</title>
 	</head>
 	<body>
